	Implemented

[FEATURE] Unit rules validation.
[FEATURE] Ammo.
[FEATURE] Stances for infantry/mechs.
[FEATURE] Quirks.
[FEATURE] Parametrize all passwords for practical security reasons before release.
[FEATURE] Multiple quirks implemented.
[FEATURE] Show password protection in game list.
[FEATURE] Redis -based API and client communication.
[FEATURE] Only show possible movement types and amounts as per unit type and penalties.
[FEATURE] Display incorrectly input fields in red.
[FEATURE] MASC
[FEATURE] Unit base speed can be altered.
[FEATURE] Heat speed effects.
[FEATURE] Listing of heat effects.
[FEATURE] Heat tracking and hit probability effects.
[FEATURE] EMP tracking and hit probability effects.
[FEATURE] Floating Critical Rule
[FEATURE] Weather
[FEATURE] Attacker ammo expenditure tracking
[FEATURE] Defender AMS ammo expenditure tracking
[FEATURE] Game owner can kick players from the game.
[FEATURE] GM can force a ready state for all players.
[FEATURE] GM can move units from a player to another.
[FEATURE] Players can gift units to other players.

[FEATURE] A player can choose to see ALL damage reports in the damage reports tab, not just those associated with him/herself.

[FEATURE] Game remembers damage reports and sends them to joining units.

[FEATURE] Damage reports contain unit names in addition to unit IDs, so that players can correctly see which units were damaged, even if the units have already been removed from the game.

[FEATURE] Total damage from attack action is now visible in the damage report.
[FEATURE] Just writing the correct weapon name selects that weapon.
[FEATURE] Default unit type is now a mech.
[FEATURE] Now all numeric items can be picked, not just distance.
[FEATURE] Flak.
[FEATURE] Weather effects, can be set by game creator.
[FEATURE] AMS Immune tag for future missiles which need it, such as Arrow IV.

	Implemented (internal)

[FEATURE] Get rid of UnitActor.
[FEATURE] Refactor code for .NET 7 and Orleans 7.