@@ -31,14 +31,14 @@ public class Credentials
     /// User or game name.
     /// </summary>
     [Required]
-    [RegularExpression(@"^[A-Za-z0-9_-]*$", ErrorMessage = "Username must be composed of alphanumeric characters, dashes and underscores.")]
+    [RegularExpression(@"^[A-Za-z0-9_-]*$", ErrorMessage = "Player or game name must be composed of alphanumeric characters, dashes and underscores.")]
     [StringLength(32, ErrorMessage = "{0} length must be between {2} and {1} characters.", MinimumLength = 1)]
     public string Name { get; set; }
 
     /// <summary>
     /// User or game password.
     /// </summary>
-    [RegularExpression(@"^\S*$", ErrorMessage = "No white space allowed in password.")]
+    [RegularExpression(@"^\S*$", ErrorMessage = "No whitespace allowed in password.")]
     [StringLength(32, ErrorMessage = "{0} length must be less than {1} characters.")]
     public string Password { get; set; }
 }
