@@ -4,9 +4,9 @@
     "LogLevelOrleans": "Information"
   },
   "ClusterOptions": {
-    "ConnectionString": "User ID=resolver;Password=2UaXv3Jd1iuWXIfdd2RIKDFUR3dpy4wd;Host=10.2.0.3;Port=65432;Database=BtDamageResolver;SSL Mode=Disable;"
+    "ConnectionString": "User ID=resolver;Password=YOURPASSWORDHERE;Host=YOURIPHERE;Port=65432;Database=BtDamageResolver;SSL Mode=Disable;"
   },
   "CommunicationOptions": {
-    "ConnectionString": "10.2.0.3:63790,password=2UaXv3Jd1iuWXIfdd2RIKDFUR3dpy4wd"
+    "ConnectionString": "YOURIPHERE:63790,password=YOURPASSWORDHERE"
   }
 }
