@@ -1,8 +1,9 @@
 ﻿@using Faemiyah.BtDamageResolver.Client.BlazorServer.Logic
 
-<div class="resolver_div_tabcontent" style="@VisualStyleController.HideElement(TabIdentity != TabSelection || !Enabled)">
+@if (TabIdentity == TabSelection && Enabled)
+{
     @ChildContent
-</div>
+}
 
 @code
 {
