@@ -38,6 +38,5 @@
     protected override void OnInitialized()
     {
         CheckedInternal = Checked;
-        _updateTimeStamp = DateTime.MinValue;
     }
 }
