@@ -1,5 +1,7 @@
 	Implemented
 
+[FEATURE] Exporter for unit data.
+[FEATURE] Invalid target is now shown in red when editing units.
 [FEATURE] Unit rules validation.
 [FEATURE] Ammo.
 [FEATURE] Stances for infantry/mechs.
@@ -41,7 +43,9 @@
 
 	Implemented (internal)
 
-[FEATURE] Get rid of UnitActor.
+[FEATURE] Refactored Gunnery/Piloting out of base unit class. Now in UnitEntry so that unit loading works correctly.
+
+[FEATURE] Got rid of UnitActor.
 [FEATURE] Refactor code for .NET 7 and Orleans 7.
 [FEATURE] Logic reflection for easier expansions.
 [FEATURE] Faster and stabler repositories.
@@ -68,6 +72,13 @@
 
 	Fixed
 
+[BUG] Burst/HeatConverted are visible on mechs etc. Fix by more carefully cleaning damage reports of invalid damage type per receiving unit type.
+
+[BUG] Backspace cannot be held when manipulating any combobox.
+[BUG] Null unit list will be loaded for users who load their state after inactivity.
+[BUG] Damage is not visible on hover on all damage reports.
+[BUG] MML ammo types cause a crash on turn resolution.
+[BUG] Battle armor and infantry weapons had 0 minimum range. Now -1 -> no effect.
 [BUG] Damage tooltip not visible in damagereports screen, only in dashboard.
 [BUG] Regression bug with weapons which do not have properties before ammo gets applied.
 [BUG] Vehicle motive hit rolls modified by vechile type could get results over 12.
